# RusTokDev

./: .architecture_progress  .architecture_review_complete  .env.dev.example  .gitignore  ADMIN_PANEL_REVIEW.md  AGENTS.md  ARCHITECTURE_ADVICE_RU.md  ARCHITECTURE_IMPROVEMENT_PLAN.md  ARCHITECTURE_REVIEW_INDEX.md  ARCHITECTURE_REVIEW_START_HERE.md  ARCHITECTURE_STATUS.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CODE_AUDIT_VERIFICATION.md  CODE_REVIEW_FIXES_2026-02-11.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_CONSOLIDATION.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS_SUMMARY.md  Makefile  OBSERVABILITY_QUICKSTART.md  PHASE2_COMPLETE.md  PLATFORM_INFO_RU.md  PROGRESS_TRACKER.md  PROJECT_STATUS.md  README.md  README.ru.md  RUSTOK_MANIFEST.md  RUSTON_MANIFEST.md  SPRINT_2_COMPLETED.md  SPRINT_3_PROGRESS.md  SPRINT_3_START.md  TASK_SUMMARY.md  TESTING_PROGRESS.md  WHATS_NEW_SPRINT_2.md  WORK_COMPLETED_2026-02-11_SESSION4.md  (+11 more)
UI/leptos/: Cargo.toml  README.md
UI/leptos/components/: README.md
UI/leptos/src/: badge.rs  button.rs  checkbox.rs  input.rs  lib.rs  select.rs  spinner.rs  switch.rs  textarea.rs  types.rs
apps/admin/: CRATE_API.md  Cargo.toml  Dockerfile  README.md  Trunk.toml  build.rs  input.css  package-lock.json  package.json
apps/admin/docs/: README.md  implementation-plan.md
apps/admin/locales/: en.json  ru.json
apps/admin/src/: app.rs  i18n.rs  lib.rs  main.rs
apps/admin/tests/: module_composition_graphql_guard.rs
apps/server/: CACHE_STAMPEDE_PROTECTION.md  CRATE_API.md  Cargo.toml  Dockerfile  README.md  build.rs  scheduler.yaml
apps/server/config/: development.yaml  production.redis.example.yaml  test.yaml
apps/server/docs/: CACHE_STAMPEDE_PROTECTION.md  CORE_VERIFICATION_PLAN.md  LOCO_FEATURE_SUPPORT.md  README.md  flex-phase45-migration-guide.md  health.md  i18n-phase0-audit.md  implementation-plan.md  library-stack.md  loco-core-integration-plan.md  loco-integration-review.md  module-lifecycle-retry-compensation-runbook.md
apps/server/migration/: Cargo.toml
apps/server/src/: app.rs  auth.rs  error.rs  graphql.rs  lib.rs  main.rs
apps/server/tests/: commerce_openapi_contract.rs  lifecycle_bypass_guard.rs  module_lifecycle.rs  multi_tenant_isolation_test.rs  platform_composition_build_service.rs  platform_composition_guard.rs  tenant_cache_stampede_test.rs  tenant_cache_v2_test.rs  tenant_resolver_invariants_test.rs
apps/storefront/: CRATE_API.md  Cargo.toml  README.md  build.rs  package-lock.json  package.json  tailwind.config.cjs
apps/storefront/assets/: input.css
apps/storefront/docs/: README.md  implementation-plan.md
apps/storefront/locales/: en.json  ru.json
apps/storefront/src/: lib.rs  main.rs
apps/storefront/static/: app.css
crates/alloy-scripting/: Cargo.toml  README.md  rustok-module.toml
crates/alloy-scripting/docs/: README.md  implementation-plan.md
crates/alloy-scripting/src/: error.rs  lib.rs  migration.rs  utils.rs
crates/flex/: Cargo.toml  README.md
crates/flex/docs/: README.md  implementation-plan.md
crates/flex/src/: errors.rs  events.rs  lib.rs  orchestration.rs  registry.rs  standalone.rs
crates/leptos-auth/: Cargo.toml  README.md
crates/leptos-auth/docs/: README.md  implementation-plan.md
crates/leptos-auth/src/: api.rs  components.rs  context.rs  hooks.rs  lib.rs  storage.rs
crates/leptos-graphql/: Cargo.toml  README.md
crates/leptos-graphql/docs/: README.md  implementation-plan.md
crates/leptos-graphql/src/: hooks.rs  lib.rs
crates/leptos-ui/: Cargo.toml
crates/leptos-ui/src/: badge.rs  button.rs  card.rs  input.rs  label.rs  language_toggle.rs  lib.rs  separator.rs  success_message.rs  types.rs
crates/rustok-ai/: Cargo.toml
crates/rustok-ai/docs/: implementation-plan.md
crates/rustok-ai/src/: direct.rs  direct_content_moderation.rs  direct_domain_commerce.rs  direct_domain_content.rs  direct_domain_orders.rs  direct_order_generation.rs  direct_order_tasks.rs  direct_product_attributes.rs  model.rs
crates/rustok-auth/: Cargo.toml
crates/rustok-auth/src/: config.rs  credentials.rs  error.rs  jwt.rs  lib.rs
crates/rustok-blog/: CRATE_API.md  Cargo.toml  README.md  rustok-module.toml
crates/rustok-blog/admin/: README.md
crates/rustok-blog/docs/: README.md  implementation-plan.md
crates/rustok-blog/src/: error.rs  lib.rs  locale.rs  seo_targets.rs  state_machine.rs  state_machine_proptest.rs
crates/rustok-blog/storefront/: README.md
crates/rustok-blog/tests/: integration.rs  module.rs
crates/rustok-cache/: Cargo.toml  README.md
crates/rustok-cache/src/: lib.rs  service.rs
crates/rustok-commerce/: CRATE_API.md  Cargo.toml  README.md  rustok-module.toml
crates/rustok-commerce/admin/: Cargo.toml  README.md
crates/rustok-commerce/docs/: README.md  implementation-plan.md
crates/rustok-commerce/src/: error.rs  lib.rs  state_machine.rs  state_machine_proptest.rs  storefront_channel.rs
crates/rustok-commerce/storefront/: Cargo.toml  README.md
crates/rustok-commerce/tests/: catalog_service_test.rs  checkout_service_test.rs  module.rs  (+11 more)
crates/rustok-content/: CRATE_API.md  Cargo.toml  README.md  rustok-module.toml
crates/rustok-core/: CRATE_API.md  Cargo.toml  README.md
crates/rustok-email/: Cargo.toml
crates/rustok-events/: CRATE_API.md  Cargo.toml  README.md
crates/rustok-forum/: CRATE_API.md  Cargo.toml  README.md  rustok-module.toml
crates/rustok-iggy/: CRATE_API.md  Cargo.toml  README.md
crates/rustok-iggy-connector/: CRATE_API.md  Cargo.toml  README.md
crates/rustok-index/: CRATE_API.md  Cargo.toml  README.md  rustok-module.toml
crates/rustok-inventory/: Cargo.toml  README.md
crates/rustok-mcp/: CRATE_API.md  Cargo.toml  README.md
crates/rustok-media/: Cargo.toml  README.md  rustok-module.toml
crates/rustok-outbox/: CRATE_API.md  Cargo.toml  README.md  rustok-module.toml
crates/rustok-page-builder/: Cargo.toml  rustok-module.toml
crates/rustok-pages/: CRATE_API.md  Cargo.toml  README.md  rustok-module.toml
crates/rustok-product/: Cargo.toml  README.md
(+2224 files in other folders)
