[workspace]
resolver = "2"
members = [
    "apps/server",
    "apps/admin",
    "apps/storefront",
    "apps/mcp",
    "crates/*",
]

[patch.crates-io]
utoipa-swagger-ui-vendored = { path = "crates/utoipa-swagger-ui-vendored" }
leptos-shadcn-pagination = { path = "crates/leptos-shadcn-pagination" }

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
description = "High-performance, modular headless CMS and e-commerce platform built with Rust"
repository = "https://github.com/RustokCMS/RusToK"

[workspace.dependencies]
# Loco Framework
loco-rs = "0.16"

# Async Runtime
tokio = { version = "1.40", features = ["full"] }

# Web
axum = "0.8.8"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Database (Loco uses SeaORM)
sea-orm = { version = "1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json",
] }
sea-orm-migration = { version = "1.0", features = ["runtime-tokio-rustls", "sqlx-postgres"] }

# GraphQL
async-graphql = { version = "7.2.1", features = ["uuid", "chrono"] }
base64 = "0.22"

# IDs
uuid = { version = "1.10", features = ["v4", "serde"] }
ulid = "1.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "2.0.18"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Leptos
leptos = "0.8.11"
leptos_axum = "0.8.11"
leptos_router = "0.8.11"
leptos-auth = { path = "crates/leptos-auth" }
leptos-graphql = { path = "crates/leptos-graphql" }
leptos-hook-form = { path = "crates/leptos-hook-form" }
leptos-zod = { path = "crates/leptos-zod" }
leptos-table = { path = "crates/leptos-table" }
leptos-zustand = { path = "crates/leptos-zustand" }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
rust_decimal = "1.36"
utoipa = "5.4"
utoipa-swagger-ui = { version = "7.0", features = ["vendored"] }
moka = { version = "0.12", features = ["future"] }
rhai = "1.24"
argon2 = "0.5"
jsonwebtoken = "10.3.0"
rand = "0.10.0"
password-hash = "0.5"
sha2 = "0.10"
once_cell = "1.19"
hex = "0.4"
iggy = "0.4.4"
reqwest-middleware = "0.3.3"
reqwest-retry = "0.5.0"

# Internal crates
rustok-core = { path = "crates/rustok-core" }
rustok-commerce = { path = "crates/rustok-commerce" }
rustok-blog = { path = "crates/rustok-blog" }
rustok-content = { path = "crates/rustok-content" }
rustok-pages = { path = "crates/rustok-pages" }
rustok-index = { path = "crates/rustok-index" }
rustok-outbox = { path = "crates/rustok-outbox" }
rustok-iggy = { path = "crates/rustok-iggy" }
rustok-iggy-connector = { path = "crates/rustok-iggy-connector" }
rustok-forum = { path = "crates/rustok-forum" }
rustok-tenant = { path = "crates/rustok-tenant" }
rustok-rbac = { path = "crates/rustok-rbac" }
rustok-telemetry = { path = "crates/rustok-telemetry" }
alloy-scripting = { path = "crates/alloy-scripting" }
