[workspace]
resolver = "2"
members = [
    "apps/server",
    "apps/admin",
    "apps/storefront",
    "crates/rustok-seo/admin",
    "crates/rustok-seo/render",
    "crates/rustok-blog/admin",
    "crates/rustok-ai/admin",
    "crates/rustok-ai-content/admin",
    "crates/rustok-ai-product/admin",
    "crates/rustok-ai-order/admin",
    "crates/rustok-comments/admin",
    "crates/rustok-blog/storefront",
    "crates/rustok-commerce/admin",
    "crates/rustok-commerce/storefront",
    "crates/rustok-cart/storefront",
    "crates/rustok-payment/storefront",
    "crates/rustok-fulfillment/admin",
    "crates/rustok-fulfillment/storefront",
    "crates/rustok-inventory/admin",
    "crates/rustok-product/admin",
    "crates/rustok-product/storefront",
    "crates/rustok-customer/admin",
    "crates/rustok-region/admin",
    "crates/rustok-region/storefront",
    "crates/rustok-order/admin",
    "crates/rustok-pricing/admin",
    "crates/rustok-pricing/storefront",
    "crates/rustok-channel/admin",
    "crates/rustok-index/admin",
    "crates/rustok-media/admin",
    "crates/rustok-outbox/admin",
    "crates/rustok-forum/admin",
    "crates/rustok-forum/storefront",
    "crates/rustok-pages/admin",
    "crates/rustok-pages/storefront",
    "crates/rustok-search/admin",
    "crates/rustok-search/storefront",
    "crates/rustok-tenant/admin",
    "crates/rustok-rbac/admin",
    "crates/rustok-workflow/admin",
    "crates/*",
    "UI/leptos",
    "ops/benches",
    "xtask",
]

[patch.crates-io]
utoipa-swagger-ui-vendored = { path = "crates/utoipa-swagger-ui-vendored" }
leptos-shadcn-pagination = { path = "crates/leptos-shadcn-pagination" }

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
description = "High-performance, modular headless CMS and e-commerce platform built with Rust"
repository = "https://github.com/RusTokRs/RusTok"

[workspace.dependencies]
# Loco Framework
loco-rs = "0.16"

# Async Runtime
tokio = { version = "1.52", features = ["full"] }

# Web
axum = { version = "0.8.9", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6.11", features = ["cors", "fs"] }

# Database (Loco uses SeaORM)
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json",
] }
sea-orm-migration = { version = "1.1", features = ["runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite"] }

# GraphQL
async-graphql = { version = "7.2.1", features = ["uuid", "chrono"] }
base64 = "0.22"

# IDs
uuid = { version = "1.23.3", features = ["v4", "serde", "js"] }
ulid = "1.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.19"
serde_yaml = "0.9"
toml = "1.0.7"
postcard = { version = "1", features = ["use-std"] }
csv = "1.3"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Error Handling
thiserror = "2.0.18"
anyhow = "1.0"

# Benchmarking
criterion = { version = "0.8", features = ["html_reports"] }

# Property-based testing
proptest = "1.11"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Text Processing
unicode-normalization = "0.1"

# Leptos
leptos = "0.8.19"
leptos_axum = "0.8.9"
leptos_router = "0.8.13"
leptos-auth = { path = "crates/leptos-auth", default-features = false }
leptos-graphql = { path = "crates/leptos-graphql" }
iu-leptos = { path = "UI/leptos" }
leptos-ui = { path = "crates/leptos-ui" }
leptos-forms = { path = "crates/leptos-forms" }
leptos-hook-form = { path = "crates/leptos-hook-form" }
leptos-table = { path = "crates/leptos-table" }
leptos-zod = { path = "crates/leptos-zod" }
leptos-struct-table = "0.18.0"
leptos-zustand = { path = "crates/leptos-zustand" }
leptos-shadcn-pagination = { path = "crates/leptos-shadcn-pagination" }
leptos-use = "0.18.0"
leptos_i18n = { version = "0.6.1" }
leptos_i18n_build = { version = "0.6.1", features = ["pretty_print"] }
leptos-next-metadata = "1.5.0"
leptos_query = "0.5.3"
leptos-chartistry = "0.2"
gloo-storage = "0.3.0"
serde_urlencoded = "0.7.1"
chrono-humanize = "0.2.3"

# Logging & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
casbin = { version = "2.20.0", default-features = false, features = ["runtime-tokio"] }

# OpenTelemetry
# NOTE: tracing-opentelemetry 0.32.x is coupled with opentelemetry 0.31.x.
# Keep this quartet aligned until upstream crates move to the same major/minor line.
opentelemetry = "0.32"
opentelemetry-otlp = "0.32.0"
tracing-opentelemetry = "0.33.0"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
rust_decimal = "1.42"
utoipa = "5.5"
utoipa-swagger-ui = { version = "7.0", features = ["vendored"] }
moka = { version = "0.12", features = ["future"] }
rhai = "1.24"
argon2 = "0.5"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
rand = "0.10.1"
password-hash = "0.6"
sha2 = "0.11"
once_cell = "1.21"
hex = "0.4"
iggy = "0.10.0"
reqwest = { version = "0.13", features = ["json", "query", "form"] }
reqwest-middleware = "0.3.3"
reqwest-retry = "0.5.0"
prometheus = "0.14"
lazy_static = "1.5"

# Internal crates
rustok-core = { path = "crates/rustok-core" }
rustok-events = { path = "crates/rustok-events" }
rustok-commerce-foundation = { path = "crates/rustok-commerce-foundation" }
rustok-commerce = { path = "crates/rustok-commerce" }
rustok-cart = { path = "crates/rustok-cart" }
rustok-cart-storefront = { path = "crates/rustok-cart/storefront" }
rustok-customer = { path = "crates/rustok-customer" }
rustok-product = { path = "crates/rustok-product" }
rustok-profiles = { path = "crates/rustok-profiles" }
rustok-comments = { path = "crates/rustok-comments", default-features = false }
rustok-region = { path = "crates/rustok-region" }
rustok-pricing = { path = "crates/rustok-pricing" }
rustok-tax = { path = "crates/rustok-tax" }
rustok-inventory = { path = "crates/rustok-inventory" }
rustok-order = { path = "crates/rustok-order" }
rustok-payment = { path = "crates/rustok-payment" }
rustok-payment-storefront = { path = "crates/rustok-payment/storefront" }
rustok-fulfillment = { path = "crates/rustok-fulfillment" }
rustok-fulfillment-storefront = { path = "crates/rustok-fulfillment/storefront" }
rustok-blog = { path = "crates/rustok-blog" }
rustok-content = { path = "crates/rustok-content" }
rustok-pages = { path = "crates/rustok-pages" }
rustok-page-builder = { path = "crates/rustok-page-builder" }
rustok-taxonomy = { path = "crates/rustok-taxonomy" }
rustok-index = { path = "crates/rustok-index" }
rustok-search = { path = "crates/rustok-search" }
rustok-seo = { path = "crates/rustok-seo" }
rustok-seo-targets = { path = "crates/rustok-seo-targets" }
rustok-seo-render = { path = "crates/rustok-seo/render" }
rustok-seo-admin-support = { path = "crates/rustok-seo-admin-support" }
rustok-auth = { path = "crates/rustok-auth" }
rustok-api = { path = "crates/rustok-api", default-features = false }
leptos-ui-routing = { path = "crates/leptos-ui-routing" }
rustok-cache = { path = "crates/rustok-cache" }
rustok-channel = { path = "crates/rustok-channel" }
rustok-email = { path = "crates/rustok-email" }
rustok-outbox = { path = "crates/rustok-outbox" }
rustok-iggy = { path = "crates/rustok-iggy" }
rustok-iggy-connector = { path = "crates/rustok-iggy-connector" }
rustok-forum = { path = "crates/rustok-forum" }
rustok-tenant = { path = "crates/rustok-tenant" }
rustok-rbac = { path = "crates/rustok-rbac" }
rustok-mcp = { path = "crates/rustok-mcp" }
rustok-ai = { path = "crates/rustok-ai" }
rustok-ai-order = { path = "crates/rustok-ai-order" }
rustok-telemetry = { path = "crates/rustok-telemetry" }
rustok-test-utils = { path = "crates/rustok-test-utils" }
rustok-storage = { path = "crates/rustok-storage" }
rustok-media = { path = "crates/rustok-media" }
flex = { path = "crates/flex" }
alloy = { path = "crates/alloy" }
rustok-workflow = { path = "crates/rustok-workflow" }
schemars = "1.2"
