[package]
name = "rustok-admin"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { workspace = true, features = ["csr"] }
leptos_router = { workspace = true }
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
thiserror = { workspace = true }
web-sys = { version = "0.3", features = ["Storage", "Window"] }
leptos-shadcn-ui = "0.1.0"
