[package]
name = "rustok-admin"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { workspace = true, features = ["csr"] }
leptos_router = { workspace = true }
leptos-auth = { workspace = true }
leptos-graphql = { workspace = true }
leptos-hook-form = { workspace = true }
leptos-zod = { workspace = true }
leptos-struct-table = { workspace = true }
leptos-zustand = { workspace = true }
leptos-shadcn-pagination = { workspace = true }
leptos-use = { workspace = true }
leptos_i18n = { workspace = true }
leptos-next-metadata = { workspace = true }
leptos_query = { workspace = true }
tailwind-rs = { workspace = true }
leptos-chartistry = { workspace = true }
gloo-storage = { workspace = true }
serde_urlencoded = { workspace = true }
chrono-humanize = { workspace = true }
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = ["json"] }
thiserror = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
web-sys = { version = "0.3", features = ["Storage", "Window"] }

[package.metadata.cargo-udeps.ignore]
normal = [
  "leptos-auth",
  "leptos-graphql",
  "leptos-hook-form",
  "leptos-struct-table",
  "leptos-zod",
  "leptos-zustand",
  "leptos-shadcn-pagination",
  "leptos-use",
  "leptos_i18n",
  "leptos-next-metadata",
  "leptos_query",
  "tailwind-rs",
  "leptos-chartistry",
  "gloo-storage",
  "serde_urlencoded",
  "chrono-humanize",
]
