[package]
name = "rustok-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[features]
default = [
    "redis-cache",
    "embed-admin",
    "embed-storefront",
    "mod-commerce",
    "mod-content",
    "mod-blog",
    "mod-forum",
    "mod-pages",
    "mod-alloy",
    "mod-media",
]
redis-cache = []
embed-admin = ["embed-admin-assets"]
embed-admin-assets = ["dep:rust-embed"]
embed-storefront = ["dep:rustok-storefront"]
# Domain module feature flags — compile the module into the binary;
# resolvers additionally check is_enabled(tenant_id) at runtime.
mod-commerce = ["dep:rustok-commerce"]
mod-content  = ["dep:rustok-content"]
mod-blog     = ["dep:rustok-blog", "dep:rustok-content"]
mod-forum    = ["dep:rustok-forum"]
mod-pages    = ["dep:rustok-pages"]
mod-alloy    = ["dep:alloy-scripting"]
mod-media    = ["dep:rustok-media", "dep:rustok-storage"]

[dependencies]
rustok-core = { workspace = true, features = ["redis-cache"] }
rustok-auth.workspace = true
rustok-cache = { workspace = true, features = ["redis-cache"] }
rustok-email.workspace = true
rustok-events.workspace = true
rustok-storefront = { path = "../storefront", optional = true }
rustok-commerce  = { workspace = true, optional = true }
rustok-blog      = { workspace = true, optional = true }
rustok-content   = { workspace = true, optional = true }
rustok-forum     = { workspace = true, optional = true }
rustok-pages     = { workspace = true, optional = true }
rustok-storage   = { workspace = true, optional = true }
rustok-media     = { workspace = true, optional = true }
rustok-index.workspace = true
rustok-tenant.workspace = true
rustok-rbac.workspace = true
rustok-telemetry.workspace = true
rustok-iggy.workspace = true
rustok-outbox.workspace = true
alloy-scripting  = { workspace = true, optional = true }

loco-rs.workspace = true
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
axum.workspace = true
axum-extra = { version = "0.12", features = ["typed-header"] }
sea-orm.workspace = true
async-graphql = { workspace = true, features = ["dataloader"] }
serde.workspace = true
serde_json.workspace = true
tera.workspace = true
toml.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
base64.workspace = true
eyre = "0.6"
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rust_decimal.workspace = true
argon2.workspace = true
hex.workspace = true
jsonwebtoken.workspace = true
password-hash.workspace = true
rhai.workspace = true
sha2.workspace = true
moka = { workspace = true, features = ["future"] }
once_cell.workspace = true
utoipa = { workspace = true, features = ["axum_extras", "uuid", "chrono", "yaml"] }
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }
futures-util = "0.3"
rust-embed = { version = "8.0", features = ["interpolate-folder-path"], optional = true }
tower-http = { workspace = true, features = ["fs"] }
mime_guess = "2.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
semver = "1.0"
rand.workspace = true
subtle = "2"
bytes = "1.0"

# Loco extras
migration = { path = "migration" }
sea-orm-migration.workspace = true

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = "3.4"
rustok-test-utils.workspace = true
tempfile = "3.27"
tower.workspace = true

[package.metadata.cargo-udeps.ignore]
development = ["serial_test"]
normal = ["rustok-rbac", "rustok-tenant"]
