[package]
name = "rustok-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
build = "build.rs"

[[bin]]
name = "migrate_legacy_richtext"
path = "src/bin/migrate_legacy_richtext.rs"
required-features = ["mod-content"]

[features]
default = [
    "redis-cache",
    "embed-admin",
    "embed-storefront",
    "mod-product",
    "mod-profiles",
    "mod-region",
    "mod-pricing",
    "mod-inventory",
    "mod-cart",
    "mod-customer",
    "mod-order",
    "mod-payment",
    "mod-fulfillment",
    "mod-commerce",
    "mod-content",
    "mod-blog",
    "mod-forum",
    "mod-comments",
    "mod-pages",
    "mod-page_builder",
    "mod-taxonomy",
    "mod-alloy",
    "mod-flex",
    "mod-media",
    "mod-seo",
    "mod-workflow",
]
redis-cache = []
embed-admin = ["dep:rustok-admin", "embed-admin-assets"]
embed-admin-assets = ["dep:rust-embed"]
embed-storefront = ["dep:rustok-storefront"]
# Domain module feature flags — compile the module into the binary;
# resolvers additionally check is_enabled(tenant_id) at runtime.
mod-cart      = ["dep:rustok-cart"]
mod-customer  = ["dep:rustok-customer"]
mod-product   = ["dep:rustok-product", "mod-taxonomy"]
mod-profiles  = ["dep:rustok-profiles", "mod-taxonomy"]
mod-region    = ["dep:rustok-region"]
mod-pricing   = ["dep:rustok-pricing", "mod-product"]
mod-inventory = ["dep:rustok-inventory", "mod-product"]
mod-order     = ["dep:rustok-order"]
mod-payment   = ["dep:rustok-payment"]
mod-fulfillment = ["dep:rustok-fulfillment"]
mod-commerce  = ["dep:rustok-commerce", "mod-cart", "mod-customer", "mod-product", "mod-region", "mod-pricing", "mod-inventory", "mod-order", "mod-payment", "mod-fulfillment"]
mod-content   = ["dep:rustok-content"]
mod-blog      = ["dep:rustok-blog", "dep:rustok-content", "mod-comments", "mod-content", "mod-taxonomy"]
mod-forum     = ["dep:rustok-forum", "mod-content", "mod-taxonomy"]
mod-comments  = ["dep:rustok-comments", "rustok-comments/server"]
mod-pages     = ["dep:rustok-pages", "mod-content", "mod-page_builder"]
mod-page_builder = ["dep:rustok-page-builder"]
mod-taxonomy  = ["dep:rustok-taxonomy", "mod-content"]
mod-alloy     = ["dep:alloy"]
mod-flex      = []
mod-media     = ["dep:rustok-media"]
mod-seo       = ["dep:rustok-seo", "mod-content"]
mod-workflow  = ["dep:rustok-workflow"]

[dependencies]
rustok-core = { workspace = true, features = ["redis-cache"] }
rustok-api = { workspace = true, features = ["loco-adapter"] }
rustok-auth.workspace = true
rustok-cache = { workspace = true, features = ["redis-cache"] }
rustok-channel.workspace = true
rustok-email.workspace = true
rustok-events.workspace = true
flex.workspace = true
rustok-admin = { path = "../admin", default-features = false, features = ["ssr"], optional = true }
rustok-storefront = { path = "../storefront", default-features = false, features = ["ssr"], optional = true }
rustok-cart      = { workspace = true, optional = true }
rustok-customer  = { workspace = true, optional = true }
rustok-product   = { workspace = true, optional = true }
rustok-profiles  = { workspace = true, optional = true }
rustok-region    = { workspace = true, optional = true }
rustok-pricing   = { workspace = true, optional = true }
rustok-inventory = { workspace = true, optional = true }
rustok-order     = { workspace = true, optional = true }
rustok-payment   = { workspace = true, optional = true }
rustok-fulfillment = { workspace = true, optional = true }
rustok-commerce  = { workspace = true, optional = true }
rustok-blog      = { workspace = true, optional = true }
rustok-comments  = { workspace = true, optional = true }
rustok-content   = { workspace = true, optional = true }
rustok-forum     = { workspace = true, optional = true }
rustok-pages     = { workspace = true, optional = true }
rustok-page-builder = { workspace = true, optional = true }
rustok-taxonomy  = { workspace = true, optional = true }
rustok-storage   = { workspace = true, features = ["s3"] }
rustok-media     = { workspace = true, optional = true }
rustok-seo       = { workspace = true, optional = true }
rustok-index.workspace = true
rustok-search.workspace = true
rustok-tenant.workspace = true
rustok-rbac.workspace = true
rustok-mcp.workspace = true
rustok-ai = { workspace = true, features = ["server"] }
rustok-telemetry.workspace = true
rustok-iggy.workspace = true
rustok-outbox.workspace = true
rustok-installer = { path = "../../crates/rustok-installer" }
alloy            = { workspace = true, optional = true }
rustok-workflow  = { workspace = true, optional = true }

loco-rs.workspace = true
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
axum.workspace = true
leptos.workspace = true
leptos_axum.workspace = true
axum-extra = { version = "0.12", features = ["typed-header"] }
sea-orm.workspace = true
async-graphql = { workspace = true, features = ["dataloader"] }
serde.workspace = true
serde_json.workspace = true
tera.workspace = true
toml.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
base64.workspace = true
eyre = "0.6"
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rust_decimal.workspace = true
argon2.workspace = true
hex.workspace = true
jsonwebtoken.workspace = true
password-hash.workspace = true
rhai-full = { package = "rhai", version = "=1.24.0", features = ["sync", "metadata"] }
sha2.workspace = true
moka = { workspace = true, features = ["future"] }
once_cell.workspace = true
utoipa = { workspace = true, features = ["axum_extras", "uuid", "chrono", "yaml"] }
redis = { version = "1.2", features = ["tokio-comp", "connection-manager"] }
futures-util = "0.3"
rust-embed = { version = "8.0", features = ["interpolate-folder-path"], optional = true }
tower-http = { workspace = true, features = ["fs"] }
mime_guess = "2.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
semver = "1.0"
rand.workspace = true
subtle = "2"
bytes = "1.0"
ipnet = "2.12"
url = "2.5"

# Loco extras
migration = { path = "migration" }
sea-orm-migration.workspace = true

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = "3.5"
rustok-test-utils.workspace = true
tempfile = "3.27"
tower.workspace = true
url = "2.5"

[build-dependencies]
serde.workspace = true
toml.workspace = true

[package.metadata.cargo-udeps.ignore]
development = ["serial_test"]
normal = ["rustok-rbac", "rustok-tenant", "password-hash"]
