[package]
name = "rustok-storefront"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
leptos = { workspace = true, features = ["ssr"] }
leptos-auth = { workspace = true }
leptos-graphql = { workspace = true }
leptos-hook-form = { workspace = true }
leptos-zod = { workspace = true }
leptos-struct-table = { workspace = true }
leptos-zustand = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[package.metadata.cargo-udeps.ignore]
normal = [
  "leptos-auth",
  "leptos-graphql",
  "leptos-hook-form",
  "leptos-struct-table",
  "leptos-zod",
  "leptos-zustand",
]
