[package]
name = "alloy-scripting"
version = "0.1.0"
edition = "2021"

[dependencies]
rhai = { version = "1.20", features = ["sync", "metadata"] }
thiserror = "2"
tracing = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
parking_lot = "0.12"
uuid = { workspace = true }
tokio = { version = "1", features = ["sync", "time"] }
async-trait = "0.1"
cron = "0.12"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde_json = "1"
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
