[package]
name = "alloy-scripting"
version = "0.1.0"
edition = "2021"
license = "MIT"
description.workspace = true

[dependencies]
rhai = { version = "1.20", features = ["sync", "metadata"] }
thiserror = "2"
tracing = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
parking_lot = "0.12"
uuid = { workspace = true }
tokio = { version = "1", features = ["sync", "time"] }
async-trait = "0.1"
cron = "0.15"
axum = "0.8.8"
serde_json = "1"
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
